k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bookshop-service
spec:
  type: NodePort
  selector:
    app: bookshop
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30007
