k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: springboot-ingress
  namespace: springboot
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: spring.local   # change to your host or use /etc/hosts for local testing
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: springboot-svc
            port:
              number: 80
